[package]
name = "hn_gql"
description = ""
version = "0.1.0"
authors = ["Dan Bruder <danbruder@hey.com"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbrgn/hn_api/"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.25"
tokio = {version = "1", features = ["full"]}
serde_json = "1"
async-graphql = "2"
warp = "0.3"
env_logger = "0.8.3"
log = "0.4.14"

hn_api = { "git" = "https://github.com/danbruder/hn_api", branch = "dan/async" }
async-graphql-warp = "2.8.5"
http = "0.2.4"
